[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = { path = "./aoc-runner" }
derive-aoc-runner = { path = "./derive-aoc-runner" }
criterion = "0.5.1"
fxhash = "0.2.1"
rayon = "1.8.0"
num = "0.4.3"
indoc = "2.0.5"

[[bench]]
name = "aoc_2024_bench"
harness = false
